[package]
name = "acl"
version = "0.1.0"
edition = "2021"

[dependencies]
curve25519-dalek = {version = "4.1.3", features=["rand_core", "digest", "group"]}
digest = "0.10.7"
group = "0.13.0"
jsonwebtoken = "9.3.0"
rand_core = {version = "0.6.4", features=["getrandom"]}
rocket_contrib = "0.4.11"
serde = { version = "1.0.210", features=["derive"] }
sha2 = "0.10.8"
subtle = "2.6.1"

[dev-dependencies]
rocket = "0.4.11"

